tenzir/integration/data/reference/parser/test_functions/step_01.ref
error: unexpected comma before any arguments
 --> /dev/stdin:1:7
  |
1 | a = b(,)
  |       ^ 
  |